--- a/Operator-Importing-for-Restricted-Networks/roles/run-custom-index-container-and-mirror/templates/catalogSource.yaml.j2
+++ b/Operator-Importing-for-Restricted-Networks/roles/run-custom-index-container-and-mirror/templates/catalogSource.yaml.j2
@@ -5,5 +5,5 @@ metadata:
   namespace: openshift-marketplace
 spec:
   sourceType: grpc
-  image: myregistry:5000/{{ latest_bundle.stdout.split('.')[0] }}-index:{{ latest_bundle.stdout | regex_replace('^.*?\\.') }}
+  image: MY_REGISTRY:5000/{{ latest_bundle.stdout.split('.')[0] }}-index:{{ latest_bundle.stdout | regex_replace('^.*?\\.') }}
   displayName: Imported {{ latest_bundle.stdout.split('.')[0] }} Operator
